--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "private": true,
   "scripts": {
+    "start": "serve dist/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c rollup.config.js",
-    "dev": "rollup -c rollup.config.js --watch && serve dist/"
+    "dev": "rollup -c rollup.config.js --watch"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "rollup": "^1.9.3",
     "rollup-plugin-node-resolve": "^4.2.2",
+    "rollup-plugin-sourcemaps": "^0.4.2",
     "serve": "^11.0.0"
   }
 }
