--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "rollup": "^1.9.3",
     "rollup-plugin-node-resolve": "^4.2.2",
-    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-terser": "^4.0.4",
     "serve": "^11.0.0"
   }
 }
